--- a/index.css
+++ b/index.css
@@ -30,8 +30,16 @@ body {
   border-radius: 10px;
   color: #fff;
   display: none;
-  padding: 15px;
   margin-top: 15px;
+  opacity: 0;
+  padding: 15px;
+
+  transition: opacity 0.5s ease-in-out;
+}
+
+#toast-msg.show {
+  display: block;
+  opacity: 1;
 }
 
 #toast-msg h3,
